# total-curvature-calculator-python-bindings

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bindings.cpp  test.py  test_cloud.py  test_mesh.py
